fixed scroll issue on mobile for sure this time

--- a/src/styles/defaults.scss
+++ b/src/styles/defaults.scss
@@ -26,8 +26,8 @@
 
  
 html {
-  overflow: hidden;
-  overflow-x: hidden;
+  // overflow-y: hidden;
+  // overflow-x: hidden;
   height: 100%;
   --red-color: rgb(255, 0, 0);
   --red-color: white;
