--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,6 +11,7 @@
     overflow-x: hidden;
     overflow-y: hidden;
     cursor: pointer;
+    height: max-content;
 
     --phone-font-size: 32px;
     --largePhone-font-size: 35px;
